--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 .App {
-  @apply m-0 p-0 border-0 outline-0 box-border list-none scroll-smooth bg-baseColor leading-[1.7] text-primaryVariantColor;
+  @apply m-0 p-0 border-0 outline-0 box-border list-none scroll-smooth leading-[1.7] text-primaryVariantColor;
 }
