--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .home {
-  @apply h-screen w-full pt-12 md:pt-28 px-12 flex flex-col md:flex-row justify-center items-center md:gap-x-24 gap-y-8;
+  @apply h-screen w-full pt-12 md:pt-28 px-12 flex flex-col md:flex-row justify-center items-center md:gap-x-24 xl:gap-x-40 gap-y-8;
 }
 
 .homeDescription {
@@ -15,23 +15,19 @@
 }
 
 .homeDescriptionHeading {
-  @apply text-base md:text-xl font-semibold tracking-[2px] pt-2 order-3;
-}
-
-.homeDescriptionButtons {
-  @apply order-4 flex justify-center items-center gap-x-6 md:pt-6 pt-8;
+  @apply text-lg md:text-xl font-semibold tracking-[2px] pt-2 order-3;
 }
 
 .homeDescriptionButton {
-  @apply text-lightColor md:text-base text-sm border border-primaryColor p-2 px-4 rounded-md;
+  @apply order-4 md:mt-6 mt-8 text-base border border-primaryColor p-2 px-4 rounded-md hover:bg-primaryColor text-primaryColor hover:text-white transition ease-in-out duration-150 flex justify-center items-center;
 }
 
-.homeCvBtn {
-  @apply hover:bg-primaryColor text-primaryColor hover:text-white transition ease-in-out duration-150;
+.homeDescriptionMore {
+  @apply text-primaryColor hidden cursor-pointer md:flex absolute bottom-0 left-1/2 translate-x-[-50%] pb-4 tracking-[2px];
 }
 
-.homeIntroBtn {
-  @apply bg-primaryColor hover:text-primaryColor text-white hover:bg-white transition duration-150 ease-in-out;
+.homeDescriptionMore > svg {
+  @apply animate-bounce mr-2 mt-2;
 }
 
 .homeProfile {
@@ -39,7 +35,7 @@
 }
 
 .homeProfileFrame {
-  @apply h-48 md:h-80 lg:h-96 md:mb-28 border-2 border-lightColor;
+  @apply h-48 sm:h-64 lg:h-96 md:mb-28 border-2 border-lightColor;
 }
 
 .homeProfilePic {
@@ -51,5 +47,5 @@
 }
 
 .homeSocialMedia > a {
-  @apply text-3xl cursor-pointer text-primaryColor hover:text-primaryVariantColor transition ease-in-out duration-150;
+  @apply text-3xl lg:text-4xl cursor-pointer text-primaryColor hover:text-primaryVariantColor transition ease-in-out duration-150;
 }
