--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,13 +1,13 @@
 .about {
-  @apply h-screen w-full pt-20 md:pt-28 px-12 flex flex-col md:flex-row justify-center items-center;
+  @apply h-screen w-full pt-20 md:pt-28 px-12 md:px-28 flex flex-col lg:flex-row justify-center items-center;
 }
 
 .aboutLeft {
-  @apply flex-[0.6] w-full h-full flex flex-col justify-start items-start gap-y-12 text-justify;
+  @apply mb-12 w-full h-full flex flex-col justify-start items-start gap-y-10  text-justify;
 }
 
 .aboutLeftTitle {
-  @apply flex flex-col justify-start items-start;
+  @apply w-full flex flex-col justify-start items-center lg:items-start;
 }
 
 .aboutLeftTitleSub {
@@ -15,23 +15,23 @@
 }
 
 .aboutLeftTitleMain {
-  @apply tracking-[5px] text-3xl font-medium text-primaryColor;
+  @apply tracking-[5px] text-2xl lg:text-3xl font-medium text-primaryColor;
 }
 
 .aboutLeftSummary {
-  @apply text-base;
+  @apply text-sm sm:text-base;
 }
 
 .aboutLeftSocialGroups {
-  @apply flex justify-center items-center gap-x-12;
+  @apply w-full grid grid-cols-2 sm:grid-cols-4 gap-4 place-items-center lg:place-items-start lg:gap-x-12;
 }
 
 .aboutLeftSocialGroup {
-  @apply flex flex-col justify-center items-center bg-variant rounded-md p-8 w-36 shadow-md border border-gray-200 cursor-pointer hover:bg-transparent transition ease-in-out duration-150;
+  @apply flex flex-col justify-center items-center bg-variant rounded-md p-6 w-28 shadow-md border border-gray-200 cursor-pointer hover:bg-transparent transition ease-in-out duration-150;
 }
 
 .aboutLeftSocialGroup > p {
-  @apply font-medium;
+  @apply font-medium text-base;
 }
 
 .aboutLeftSocialIcon {
@@ -39,25 +39,32 @@
 }
 
 .aboutLeftCVGroups {
-  @apply flex justify-center items-center gap-x-2;
+  @apply w-full flex justify-center items-center lg:justify-start;
 }
 
 .aboutLeftCVGroups > p {
-  @apply tracking-[2px];
+  @apply tracking-[2px] text-center;
 }
 
 .aboutLeftCV {
-  @apply p-2 text-center hover:scale-110 transition duration-100 ease-in-out font-medium  pr-4;
-}
-
-.aboutLeftCVBorder {
-  @apply border-r;
+  @apply p-2 text-center hover:scale-110 transition duration-100 ease-in-out font-medium;
 }
 
 .aboutRight {
-  @apply flex-[0.4] w-full h-full mx-12 flex justify-center items-center pb-12;
+  @apply mb-12 w-full h-full hidden lg:flex justify-center items-center;
 }
 
 .aboutRightPic {
-  @apply object-cover w-full h-auto rounded-[2rem] rotate-6 transition duration-[400] ease-in-out hover:rotate-0;
+  @apply object-cover relative -mr-28 xl:-mr-0 lg:h-96 xl:h-[80%] rounded-[2rem] rotate-6 transition duration-[400] ease-in-out hover:rotate-0;
 }
+
+/*
+.aboutRight {
+  @apply w-[16rem] h-[24rem] xl:w-[20rem] xl:h-[26rem] -mb-16 mt-16 pt-16 xl:pt-8 pb-6 bg-gradient-to-t from-transparent to-primaryColor rounded-t-[12rem] rounded-r-[12rem] overflow-hidden absolute bottom-0;
+}
+
+.aboutRightPic {
+  @apply block w-full object-cover;
+}
+
+*/
