--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,9 @@
 .home {
-  @apply h-screen w-full pt-12 md:pt-28 px-12 md:px-28 flex flex-col md:flex-row justify-center items-center md:gap-x-24 xl:gap-x-40 gap-y-8;
+  @apply h-screen w-full p-20 px-12 md:px-28 flex flex-col md:flex-row justify-center items-center md:gap-x-24 xl:gap-x-40 gap-y-8;
 }
 
 .homeDescription {
-  @apply md:flex-[0.4] mb-12 md:mb-28 order-2 md:order-1 flex flex-col items-center md:items-end md:gap-y-6;
+  @apply md:flex-[0.4] order-2 md:order-1 flex flex-col items-center md:items-end md:gap-y-6;
 }
 
 .homeDescriptionName {
@@ -19,7 +19,7 @@
 }
 
 .homeDescriptionButton {
-  @apply order-4 md:mt-6 mt-8 text-base border border-primaryColor p-2 px-4 rounded-md hover:bg-primaryColor text-primaryColor hover:text-white transition ease-in-out duration-150 flex justify-center items-center;
+  @apply order-4 md:mt-6 mt-8 text-sm md:text-base border border-primaryColor p-2 px-4 rounded-md hover:bg-primaryColor text-primaryColor hover:text-white transition ease-in-out duration-150 flex justify-center items-center;
 }
 
 .homeDescriptionMore {
@@ -35,7 +35,7 @@
 }
 
 .homeProfileFrame {
-  @apply h-48 sm:h-64 lg:h-96 md:mb-28 border-2 border-lightColor;
+  @apply h-48 sm:h-64 lg:h-96 border-2 border-lightColor;
 }
 
 .homeProfilePic {
@@ -43,7 +43,7 @@
 }
 
 .homeSocialMedia {
-  @apply flex flex-row md:flex-col justify-center items-center gap-x-4 md:gap-y-4 md:mb-28;
+  @apply flex flex-row md:flex-col justify-center items-center gap-x-4 md:gap-y-4;
 }
 
 .homeSocialMedia > a {
