--- a/src/pages/experience/Experience.css
+++ b/src/pages/experience/Experience.css
@@ -1,17 +1,5 @@
 .experience {
-  @apply h-screen w-full p-20 px-12 md:px-28 flex flex-col justify-start items-center gap-y-10;
-}
-
-.experienceTitle {
-  @apply w-full flex flex-col justify-start items-center lg:items-start;
-}
-
-.experienceTitleSub {
-  @apply font-medium;
-}
-
-.experienceTitleMain {
-  @apply tracking-[5px] text-2xl lg:text-3xl font-medium text-primaryColor;
+  @apply w-full p-20 px-12 md:px-28 flex flex-col justify-start items-center gap-y-10;
 }
 
 .experienceCards {
@@ -48,8 +36,4 @@
 
 .experienceCardSummaryInfo {
   @apply py-2 pr-2 text-justify text-sm md:text-base;
-}
-
-.educationMoreDetails {
-  @apply flex justify-center items-center text-sm -mb-8;
 }
