--- a/src/components/navPanel/Nav.css
+++ b/src/components/navPanel/Nav.css
@@ -2,6 +2,10 @@
   @apply flex items-center p-2 text-primaryVariantColor bg-[rgba(0,0,0,0.1)] gap-[0.8rem] rounded-[3rem] md:rounded-sm backdrop-blur-[15px] opacity-80 fixed bottom-2 left-1/2 translate-x-[-50%] md:right-0 md:left-auto md:translate-x-0 md:top-0 md:bottom-auto md:bg-white md:h-20 md:px-12 z-30;
 }
 
+.navListOffset {
+  @apply bottom-28 md:bottom-auto;
+}
+
 .navMenuIcon {
   @apply text-xl md:text-2xl cursor-pointer transition hover:bg-[rgba(0,0,0,0.3)] duration-100 ease-in bg-transparent p-[0.9rem] md:rounded-sm flex text-lightColor hover:text-white rounded-[50%];
 }
