Update final configs

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -22,6 +22,14 @@
   @apply text-sm sm:text-base;
 }
 
+.aboutLeftGithubInfo {
+  @apply text-xs md:text-start flex flex-col justify-start items-center md:items-start text-center gap-y-1 border rounded-sm px-2 -mb-4 md:-mb-6;
+}
+
+.aboutLeftGithubInfo > p > span {
+  @apply font-semibold;
+}
+
 .aboutLeftSocialGroups {
   @apply w-full grid grid-cols-2 sm:grid-cols-4 gap-4 place-items-center lg:place-items-start lg:gap-x-12;
 }
@@ -47,7 +55,7 @@
 }
 
 .aboutLeftCV {
-  @apply p-1 lg:p-2 text-center hover:scale-110 transition duration-100 ease-in-out font-medium;
+  @apply p-0 md:p-1 lg:p-2 text-center hover:scale-110 transition duration-100 ease-in-out font-medium;
 }
 
 .aboutRight {
