--- a/src/pages/experience/Experience.css
+++ b/src/pages/experience/Experience.css
@@ -23,7 +23,7 @@
 }
 
 .experienceCardCompany {
-  @apply text-sm md:text-base text-center pb-1;
+  @apply text-sm md:text-base text-center pb-1 h-12 flex justify-center items-center;
 }
 
 .experienceCardDate {
